Author:         Brandon Bickford
Maintainer:     bickfordb@gmail.com
Name:           taglib
Version:        0.0.1
Cabal-Version:  >= 1.2
License:        BSD3
Category:       Utils
Copyright:      (c) 2008 by Brandon Bickford
Synopsis:       Haskell binding to TagLib
Description:
  This is a Haskell binding to TagLib, a popular library for reading and writing tags of media files.

Build-Type:     Simple

Library 
  Exposed-Modules: Sound.TagLib
  Build-Depends:  base, bytestring, utf8-string
  Extensions: ForeignFunctionInterface, CPP
  Hs-Source-Dirs: src

  Extra-libraries: tag_c
  extra-lib-dirs: /usr/local/lib, /opt/local/lib

